$Id$

2016-01-21  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h: Added ADATA SP550 SSD (ticket #638)
	os_freebsd.cpp: Reduce variable scope where possible (cppcheck: variableScope)
	os_openbsd/os_netbsd - removed never used warning code defines (cppcheck)

2016-01-21  Christian Franke  <franke@computer.org>

	ataprint.cpp, smartd.cpp: Don't issue SCT commands if ATA Security
	is locked (ticket #637).

2016-01-19  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	 - Samsung PM871 SSD family (ticket #636)
	 - Fixed detection for Samsung SSD 850 EVO mSATA 120GB (ticket #635)
	 - Fixed Western Digital Caviar Black regexp, extended WD Black (ticket #631)

2016-01-06  Christian Franke  <franke@computer.org>

	drivedb.h:
	- SandForce Driven SSDs: Extra warning entry for buggy Corsair Force LS
	  (ticket #628)
	- Innodisk 3MG2-P SSDs: 1.8" variant
	- Innodisk 3ME3 SSDs
	- USB: Seagate Expansion Portable (0x0bc2:0x2322) (ticket #627)
	- USB: Jess-Link (0x0dbf:0x9001)

2016-01-01  Christian Franke  <franke@computer.org>

	Happy New Year! Update copyright year in version info.

2015-12-19  Christian Franke  <franke@computer.org>

	Makefile.am: Fix path of 'smart-pkg-uninstall' (Regression from r4190).

	update-smart-drivedb.8.in: Fix platform specific formatting.

2015-12-18  Alex Samorukov <samm@os2.kiev.ua>

	os_netbsd.cpp, os_openbsd.cpp: fix ioctl returtn value check
	os_darwin.cpp: fix error handling
	os_darwin: use /usr/local/ prefix to install on 10.11 (El Capitan)

2015-12-16  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: stop tape drive looking for Solid State media
	log page (ticket #314).

2015-12-14  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: fix compiler warning for is_tape. Clean code around
	handling of tape drives.

2015-12-14  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Intel 320 Series SSDs: 1.8" microSATA
	- Intel 53x and Pro 2500 Series SSDs: Rename, add 535 (ticket #625),
	  add Pro 2500